--- a/HTML Tasks/task5.html
+++ b/HTML Tasks/task5.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 5</title>
+    <title>Task 4</title>
 </head>
 <body>
     <form>
-    <table  cellpadding="" bordercolor="black" cellspacing="0" border="1">
+    <table  cellpadding="0" bordercolor="" cellspacing="0" border="1">
     <tr>
         <td><label for="fname">First Name:</label></td>
         <td><input id="fname" type="text" size="50"></td>
@@ -62,7 +62,7 @@
             <label for="address" >Address:</label>
         </td>
         <td>
-            <input id="address" type="text" size="50">
+            <input id="address" type="text" size="50" style="height: 50px;">
         </td>
     </tr>
     <tr>
@@ -105,7 +105,7 @@
 
     <tr>
         
-            <td colspan="2">Log in to the <a href="www.ethnus.com" target="_blank">Ethnus</a> website</td>
+        <td colspan="2">Log in to the <a href="www.ethnus.com" target="_blank">Ethnus</a> website</td>
         
     </tr>
 
