--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <tr>
             <td>Task 1</td>
-            <td><a href="https://github.com/tanishqj-19/Ethnus-MERN-Internship/blob/main/HTML%20Tasks/task1.html" target="_blank">Link 1</a></td>
+            <td><a href="./HTML%20Tasks/task1.html" target="_blank">Link 1</a></td>
         </tr>
 
         <tr>
